syntax = "proto3";

import "bscp.io/pkg/protocol/core/base/base.proto";

package pbss;

option go_package = "bscp.io/pkg/protocol/core/strategy-set;pbss";

// StrategySet source resource reference: pkg/dal/table/strategy_set.go
message StrategySet {
    uint32 id                        = 1;
    StrategySetSpec spec             = 2;
    StrategySetState state           = 3;
    StrategySetAttachment attachment = 4;
    pbbase.Revision revision         = 5;
}

// StrategySetSpec source resource reference: pkg/dal/table/strategy_set.go
message StrategySetSpec {
    string name = 1;
    string mode = 2;
    string memo = 3;
}

// StrategySetState source resource reference: pkg/dal/table/strategy_set.go
message StrategySetState {
    string status = 1;
}

// StrategySetAttachment source resource reference: pkg/dal/table/strategy_set.go
message StrategySetAttachment {
    uint32 biz_id = 1;
    uint32 app_id = 2;
}
